--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -20,6 +20,10 @@ main section.categories-show {
       margin-top:    20px;
       // margin:        10px;
 
+      .sold-out {
+        // TODO: Maddie add styles for the sold out badge here
+      }
+
       header img {
         max-width: 100%;
         max-height: 140px;
