--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,6 +44,21 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        <% if current_user %>
+          <li>
+            <a href="#">Welcome, <%= current_user.name %></a>
+          </li>
+          <li>
+            <%= link_to "Logout", '/logout' %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to 'Login', '/login' %>
+          </li>
+          <li>
+            <%= link_to 'Register', '/register' %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
