--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,7 @@
 <article class="product">
   <% if product.quantity == 0 %>       
     <div class="sold-out">
-      Sold Out
+      SOLD OUT!
     </div>
   <% end %>
   <header>
