--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,29 +5,29 @@
 <%= form_for :user, url: '/users' do |f| %>
 
     <div class="form-group row">
-        <label for="name" class="col-sm-2 col-form-label">Name</label>
+        <%= f.label :name, for: 'name', class: 'col-sm-2 col-form-label' %>
         <div class="col-sm-10">
-            <%= f.text_field :name %>
+            <%= f.text_field :name, class: 'form-control' %>
         </div>
     </div>
     <div class="form-group row">
-        <label for="name" class="col-sm-2 col-form-label">Email</label>
+        <%= f.label :email, for: 'email', class: 'col-sm-2 col-form-label' %>
         <div class="col-sm-10">
-            <%= f.text_field :email %>
+            <%= f.text_field :email, class: 'form-control' %>
         </div>
     </div>
     <div class="form-group row">
-        <label for="password" class="col-sm-2 col-form-label">Password</label>
+        <%= f.label :password, for: 'password', class: 'col-sm-2 col-form-label' %>
         <div class="col-sm-10">
-            <%= f.password_field :password %>
+            <%= f.password_field :password, class: 'form-control' %>
         </div>
     </div>
     <div class="form-group row">
-        <label for="password_confirmation" class="col-sm-2 col-form-label">Password Confirmation</label>
+        <%= f.label :password_confirmation, for: 'password_confirmation', class: 'col-sm-2 col-form-label' %>
         <div class="col-sm-10">
-            <%= f.password_field :password_confirmation %>
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
         </div>
     </div>
-    <%= f.submit "Submit" %>
+    <%= f.submit "Submit", class: 'btn btn-primary' %>
 
 <% end %>
