add functinality to support user ratings and reviews

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,6 +9,9 @@
       <%= image_tag product.image.thumb, alt: product.name %>
       <h4><%= product.name %></h4>
     <% end %>
+    <% if product.reviews.size != 0 %>
+      <p>Average Rating: <%= product.average_rating %></p>
+    <% end %>
   </header>
   <p class="description">
     <%= product.description %>
