--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,6 +26,42 @@
       </div>
     </div>
 
+    <div class="row">
+      <h2>Ratings and Reviews</h2>
+      <% if current_user %>
+        <h3>Review this product</h3>
+        <%= form_for [@product, Review.new] do |f| %>
+          <div class="form-group row">
+              <%= f.label :rating, for: 'rating', class: 'col-sm-2 col-form-label' %>
+              <div class="col-sm-10">
+                  <%= f.select :rating, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5']], class: 'form-control' %>
+              </div>
+          </div>
+          <div class="form-group row">
+            <%= f.label :comment, for: 'comment', class: 'col-sm-2 col-form-label' %>
+            <div class="col-sm-10">
+                <%= f.text_area :comment, class: 'form-control' %>
+            </div>
+          </div>
+          <%= f.submit "Submit Review", class: 'btn btn-primary' %>
+        <% end %>
+      <% end %>
+      <h3>User Ratings</h3>
+      <% if @product.reviews.size != 0 %>
+        <% @product.reviews.order('created_at DESC').each do |review| %>
+          <div class="review">
+            <p>Rating: <%= review.rating %></p>
+            <p>Comment: <%= review.comment %></p>
+            <% if review.user == current_user %>
+              <%= link_to 'Delete Review',  @product.review_path(review),  method: :delete, data: { confirm: 'Are you sure?' } %>
+            <% end %>
+          </div>
+        <% end %>
+      <% else %>
+        <h3>No reviews submitted yet</h3>
+      <% end %>
+    </div>
+
   </article>
 
 </section>
